Attention to detail update
Just updated the word Purplescope to PurpleScope and dropped the Limited in the statement of where we are registered as it was showing twice

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ body.theme-light .text-white\/50, body.theme-light .text-white\/40 { color:#111 
           </div>
         </div>
         <div class="mt-6 border-t border-white/10 pt-4 text-xs text-white/50">
-          Purplescope Limited is registered in England and Wales as Purplescope Limited (No. 16648851), with its registered office at 314-318 Selbourne Road, Luton, England, LU4 8NU.
+          PurpleScope is registered in England and Wales as PurpleScope Limited (No. 16648851), with its registered office at 314-318 Selbourne Road, Luton, England, LU4 8NU.
         </div>
       </div>
     </div>
